feat: 푸디풀 인스타그램 사진 추가

--- a/menu3.html
+++ b/menu3.html
@@ -26,7 +26,7 @@
       <div>
         <p class="order-way">주문 방법</p>
         <span class="sns"><img src="foodifuljpg/kakao.jpg" width="50px" height="50px" alt="카카오톡"> 카카오톡 채널 <a href="http://pf.kakao.com/_fxduzb" target="_blank">"푸디풀"</a></span>
-        <p class="sns"> <img src="foodifuljpg/insta.png" width="50px" height="50px" alt="인스타그램"> 인스타그램 "foodi_ful"</p>
+        <p class="sns"> <img src="foodifuljpg/insta2.png" width="50px" height="50px" alt="인스타그램"> 인스타그램 "foodi_ful"</p>
         <p class="sns"> <img src="foodifuljpg/naver.jfif" alt="네이버" width="50px" height="50px" /> 블로그 "blog.naver.com/jmj962727"</p>
       </div>
     </div>
