feat: 지도 네이버로 변경 및 Q&A 리뷰로 변경

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           </li>
           <li>
             <a href="menu2.html" title="Q&A 안내">
-              Q&A
+              주문방법
             </a>
           </li>
           <li> <a href="menu3.html" title="떡케이크 안내">
-              주문방법
+              리뷰
             </a></li>
-          <a href="https://www.google.com/maps/place/%ED%91%B8%EB%94%94%ED%92%80/@35.1508631,129.1110309,17z/data=!3m1!4b1!4m5!3m4!1s0x3568ed33cc098c31:0xf912ad2eaab2bbc0!8m2!3d35.1508631!4d129.1132196?hl=ko" target="_blank"
+          <a href="https://map.naver.com/v5/entry/place/1932269890?c=14372817.3262185,4184400.0948748,13,0,0,0,dh&placePath=%2Fhome%3Fentry=plt" target="_blank"
             title="foodifulmap"><span id="map">→오시는길</span></a>
 
         </ul>
