--- a/menu2.html
+++ b/menu2.html
@@ -1,22 +1,37 @@
 <!doctype html>
 <html>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Foodiful 질의응답</title>
 
   <head>
-    <title>Foodiful Q&A</title>
+    <title>Foodiful 주문방법</title>
+    <link rel="stylesheet" href="./css/menu3.css" />
 
   <body>
-    <div class="title">푸디풀 질의응답</div>
-    <div class="container"><input type="text" id="input-box" /><button>문의입력</button></div>
-    <ul class="contents">
-      <li></li>
-    </ul>
+    <h1><a href="menu3.html">
+        푸디풀 주문방법
+      </a></h1>
+    <div id="dasik-grid">
+      <div id="menugrid">
 
+        <p class="order">주문방법
+
+        <ul>Kakao</ul>
+        <ul>Instagram</ul>
+        <ul>Blog</ul>
+
+        <ul><a href="index.html">돌아가기<img src="foodifuljpg/click.jpg" alt="클릭" width="50px" height="50px" /></a></ul>
+        </p>
+
+      </div>
+      <div>
+        <p class="order-way">주문 방법</p>
+        <span class="sns"><img src="foodifuljpg/kakao.jpg" width="50px" height="50px" alt="카카오톡"> 카카오톡 채널 <a href="http://pf.kakao.com/_fxduzb" target="_blank">"푸디풀"</a></span>
+        <p class="sns"> <img src="foodifuljpg/insta2.png" width="50px" height="50px" alt="인스타그램"> 인스타그램 "foodi_ful"</p>
+        <p class="sns"> <img src="foodifuljpg/naver.jfif" alt="네이버" width="50px" height="50px" /> 블로그 "blog.naver.com/jmj962727"</p>
+        <p class="order-way"> 주문은 최소 3일전에 부탁드려요!</p>
+      </div>
+    </div>
   </body>
-  <script src="app.js"></script>
   </head>
 
 </html>
