--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
     <link rel="stylesheet" href="./css/index.css" />
 
   <body>
-    <h1><a href=" index.html">
-        푸디풀
-      </a></h1>
-    <div id="grid">
-      <div id="menugrid">
-        <ul class="menu">
-          <li>
-            <a href="menu1.html" title="메뉴 안내">
-              메뉴안내
-            </a>
-          </li>
-          <li>
-            <a href="menu2.html" title="Q&A 안내">
-              Q&A
-            </a>
-          </li>
-          <li> <a href="menu3.html" title="떡케이크 안내">
-              주문방법
-            </a></li>
-          <a href="https://www.google.com/maps/place/%ED%91%B8%EB%94%94%ED%92%80/@35.1508631,129.1110309,17z/data=!3m1!4b1!4m5!3m4!1s0x3568ed33cc098c31:0xf912ad2eaab2bbc0!8m2!3d35.1508631!4d129.1132196?hl=ko" target="_blank"
-            title="foodifulmap"><span id="map">→오시는길</span></a>
+    <header>
+      <h1><a href=" index.html">
+          푸디풀
+        </a></h1>
+    </header>
+    <div id="home">
+      <aside id="sidebar">
+        <nav id="sidebar__nav">
+          <ul class="sidebar__nav-item-list">
+            
+              <li class="sidebar__nav-item home" onClick() title="메뉴 안내">
+                메뉴안내
+              
+            </li>
+            <li>
+              <a href="menu2.html" title="Q&A 안내">
+                Q&A
+              </a>
+            </li>
+            <li> <a href="menu3.html" title="떡케이크 안내">
+                주문방법
+              </a></li>
+            <a href="https://www.google.com/maps/place/%ED%91%B8%EB%94%94%ED%92%80/@35.1508631,129.1110309,17z/data=!3m1!4b1!4m5!3m4!1s0x3568ed33cc098c31:0xf912ad2eaab2bbc0!8m2!3d35.1508631!4d129.1132196?hl=ko" target="_blank"
+              title="foodifulmap"><span id="map">→오시는길</span></a>
 
-        </ul>
-      </div>
+          </ul>
+        </nav>
+      </aside>
 
       <div id="content">
         <p><strong>Food + Beautiful</strong> 음식의 아름다움을 추구하는</p>
